--- a/frontend/src/app/core/nav/nav.component.html
+++ b/frontend/src/app/core/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header>
 	<nav>
 		<div class="logo">
-			<a routerLink="/">Wiking Calendar</a>
+			<a routerLink="/">Wiking</a>
 		</div>
 
 		<div class="search">
