--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -27,6 +27,24 @@ $nav-text-color: $wiking-accent-color;
 
 
 
+
+$wiking-nav-color: wiking-color($grey, 900);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 $wiking-calendar__sidebar: wiking-color($deepOrange, 800);
 $wiking-calendar__day: $wiking-accent-color;
 $wiking-calendar__day__header: wiking-color($grey, 700);
