--- a/frontend/src/app/modules/calendar/+calendar-toolbar/calendar-toolbar.component.scss
+++ b/frontend/src/app/modules/calendar/+calendar-toolbar/calendar-toolbar.component.scss
@@ -17,13 +17,13 @@
 	}
 
 	&--change {
-		background: wiking-color($grey, 700);
+		background: wiking-old($grey, 700);
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 	}
 
 	&--date {
-		background: wiking-color($grey, 800);
+		background: wiking-old($grey, 800);
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -31,7 +31,7 @@
 	}
 
 	&--view {
-		background: wiking-color($grey, 700);
+		background: wiking-old($grey, 700);
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 
