footer search and css update

--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
+
+<div class="footer__search"></div>
 <footer>
 	<div class="copy"><fa-icon [icon]="copy"></fa-icon> {{ year }} <a>Wiking Calendar</a> All Rights Reserved</div>
 </footer>
