--- a/frontend/src/app/core/footer/footer.component.scss
+++ b/frontend/src/app/core/footer/footer.component.scss
@@ -1,9 +1,14 @@
 @import "variables";
-	
+
+.footer__search {
+	width: 100%;
+	height: 150px;
+	background: $footer__search-color;
+}
+
 footer {
 	background: $footer-color;
-	border-bottom: 20px solid $footer--border-color;
-	height: 200px;
+	height: 50px;
 	text-align: center;
 	display: grid;
 
@@ -11,7 +16,7 @@ footer {
 		color: $footer--text-color;
 		font-size: 0.9rem;
 		margin: 10px 0;
-		align-self: end;
+		align-self: center;
 
 		a {
 			color: $header--text-color;
