--- a/frontend/src/app/core/nav/nav.component.html
+++ b/frontend/src/app/core/nav/nav.component.html
@@ -10,8 +10,7 @@
 		</div>
 
 		<ul>
-			<li><a>Settings</a></li>
-			<li><a>Sign-in</a></li>
+			<li><a routerLink="/auth/signin">Sign-in</a></li>
 		</ul>
 	</nav>
 </header>
