auth with token

--- a/frontend/src/app/core/nav/nav.component.html
+++ b/frontend/src/app/core/nav/nav.component.html
@@ -10,7 +10,8 @@
 		</div>
 
 		<ul>
-			<li><a routerLink="/auth/signin">Sign-in</a></li>
+			<li *ngIf="!(isLoggedIn$ | async)"><a routerLink="/auth/signin">Sign-in</a></li>
+			<li *ngIf="isLoggedIn$ | async"><a routerLink="/auth/signin">Logout</a></li>
 		</ul>
 	</nav>
 </header>
