--- a/frontend/src/app/layouts/+auth/auth.component.html
+++ b/frontend/src/app/layouts/+auth/auth.component.html
@@ -1,5 +1,7 @@
-<p>
-  auth layout works!
-</p>
+<div class="auth">
+	<div class="auth__top">
+		<h1 class="auth__top--title">Wiking</h1>
+	</div>
 
-<router-outlet></router-outlet>
+	<router-outlet></router-outlet>
+</div>
